--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Zul Amri Durrin Nafis",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/compute": "^2.6.0",
     "@google-cloud/speech": "^4.8.0",
     "@google-cloud/storage": "^5.14.2",
     "@google-cloud/text-to-speech": "^3.3.1",
