--- a/.env
+++ b/.env
@@ -11,6 +11,6 @@ REFRESH_TOKEN_SECRET=e2725884ee8357f6f34d82d18929a47af9252ea363f9d6a1417a2a642e8
 DB_HOST=localhost
 DB_INSTANCE_CONNECTION_NAME=tegiainew:asia-northeast3:tegiai-db
 DB_USER=root
-DB_NAME=tegiai
-DB_PASSWORD=GxhOOLciffL8GA0f
+DB_NAME=db_tegi
+DB_PASSWORD=!@#123Qwe
 
