--- a/.env
+++ b/.env
@@ -12,5 +12,5 @@ DB_HOST=127.0.0.1
 DB_INSTANCE_CONNECTION_NAME=tegiainew:asia-northeast3:tegiai-db
 DB_USER=root
 DB_NAME=tegiai-db
-DB_PASSWORD=!@#123QWe
+DB_PASSWORD=!@#123Qwe
 
